fixes alignment of single map view

--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -82,7 +82,7 @@
 
   .map-info {
     width: 80%;
-    height: 600px;
+    height: 100%;
     justify-content: space-around;
     
       h5 {
