--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -62,10 +62,9 @@ section.maps {
 .left {
   margin-top: 120px;
 
-  .form-container {
+  .form-container,
+  .map-info-container {
     height: 80vh;
-    position: relative;
-    top: 0;
   }
 }
 
